e2e tests and postgres dirver support